--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <section class="paralax" id="prl1">
             <figure>
-                <figcaption class="legend" id="leg1">
+                <figcaption class="legend">
                     <p>
-                        Não é mais como era antes
-                        É tudo abreviado
-                        "Você" só tem duas letras
-                        O "O" e o "E" foi riscado
-                        Para declarar o amor
-                        Basta botar uma flor
+                        Não é mais como era antes <br>
+                        É tudo abreviado <br>
+                        "Você" só tem duas letras <br>
+                        O "O" e o "E" foi riscado <br>
+                        Para declarar o amor <br>
+                        Basta botar uma flor <br>
                         E um coração desenhado.
                     </p>
                 </figcaption>
@@ -63,14 +63,14 @@
 
         <section class="paralax" id="prl2">
             <figure>
-                <figcaption class="legend" id="leg2">
+                <figcaption class="legend">
                     <p>
-                        Tenho saudade das cartas
-                        Escritas com a própria mão
-                        Mandava no mês de Junho
-                        Só chegava no Verão
-                        Mas matava a saudade
-                        Era texto de verdade
+                        Tenho saudade das cartas <br>
+                        Escritas com a própria mão <br>
+                        Mandava no mês de Junho <br>
+                        Só chegava no Verão <br>
+                        Mas matava a saudade <br>
+                        Era texto de verdade <br>
                         Nas linhas do coração.
                     </p>
                 </figcaption>
@@ -100,7 +100,7 @@
     </main>
     <footer>
         <p>
-            Por <a href="https://github.com/Guilherme-Bertelli/" target="_blank">Guilherme Henrique</a> para fins de aprendizado através do <br> canal <a href="https://www.youtube.com/@CursoemVideo" target="_blank">Curso em Vídeo</a>. 
+            <span class="txtF">Por</span> <a href="https://github.com/Guilherme-Bertelli/" target="_blank">Guilherme Henrique </a> <span class="txtF">estudado no canal</span> <a href="https://www.youtube.com/@CursoemVideo" target="_blank">Curso em Vídeo</a>. 
         </p>
     </footer>
 </body>
